fix: node descriptions, prerequisite chains and zoom in the Tome (#136)
Three things from the hub-renderer playtest.

Half the tree had no lang entry at all — 49 of 88 nodes. Names survived
it because the Tome falls back to NodeDef#name(); descriptions have
nothing to fall back to, so the tooltip printed
node.orevault.<id>.desc at the player. The missing names and
descriptions are written from §6.1 rather than invented, so the two
cannot drift, and NodeLangTest now fails the build if a node lacks
either key or a key names a node that is gone. It was verified by
breaking a key on purpose and watching the test catch it.

Prerequisites on the outer rings were unreadable. Hovering a node now
lights its whole chain back to the anchor: a halo outside each box, so
the node's own purchase colour still shows underneath, and the edges
between them redrawn on top. The tooltip says the same in words —
every prerequisite named with the tier and the cluster it is in, green
or red for met — and a locked node's reason names the node, the level
or the cost standing in the way instead of saying one exists.

The wheel zooms, 0.2x to 1.5x, anchored on the pointer so what is
under the cursor stays there. It used to scroll vertically, which a
944 by 6008 page makes nearly useless. Zoomed out, node text is
dropped rather than drawn three pixels tall, and lines are thickened
so a hairline scaled to a fifth of a pixel does not vanish. A readout
in the corner says how far out the view is; the previous build had no
zoom at all, which is why the ask was phrased as extending one.

./gradlew build --rerun-tasks — 163 tests, 0 failures across 16
suites, counted from build/test-results/test/*.xml.
./gradlew runGameTestServer boots and shuts down clean.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019m7gztnA9GTqszEPoU1ozz